# lacuna

./: .gitignore  Cargo.toml  README.md
circuits/: order_match.circom  order_match.r1cs  order_match.sym  package.json  verification_key.json
circuits/order_match_js/: order_match.wasm
contracts/dark_pool/: Cargo.toml
contracts/dark_pool/src/: lib.rs
contracts/groth16_verifier/: Cargo.toml
contracts/groth16_verifier/src/: lib.rs
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/orders/: route.ts
frontend/src/app/components/: Header.tsx  LandingPage.tsx  MatchPanel.tsx  OrderBook.tsx  OrderForm.tsx  WalletModal.tsx
frontend/src/app/lib/: circuit.ts  relay.ts  stellar.ts  storage.ts  types.ts
frontend/src/types/: circomlibjs.d.ts  snarkjs.d.ts
keys/: order_match_final.zkey
scripts/: demo.js  deploy.js  init.js  package-lock.json  package.json  utils.js
