[package]
name = "dark-pool"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
groth16-verifier = { path = "../groth16_verifier" }

[dev-dependencies]
soroban-sdk = { version = "25", features = ["testutils"] }
groth16-verifier = { path = "../groth16_verifier", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils", "groth16-verifier/testutils"]
